NLA Snap to Markers is broken #110108
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#110108
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system:
Graphics card:
Blender Version
Broken: latest main
Worked: 2.93
Caused by
bd00324c26
Short description of error
When the NLA snapping mode is set to "Nearest Marker", dragging the strip collapses it to the marker position
Also right clicking then doesn't but it back to the starting position
In fact "Nearest Second" is also slightly broken. It seems the start and end of the strip snap individually
Exact steps for others to reproduce the error
Drag's behavior is already broken, but cancel the transform and notice that it's even more broken.
This is sort of the same in the DopeSheet and Graph Editor as well (keyframes get collapsed there -- which is probably undesired as well)
Thanks for the report, I can confirm.
I tested it on 2.97, it worked there, so it's a regression.
Germano Cavalcante referenced this issue2023-07-15 00:36:39 +02:00
I think the markers case was broken before?
I must say that snapping both start and end is pretty obscure, it looks like the system was set up with this in mind if I look at
createTransNlaData
.I agree that this is not ideal. The strip length changes in an unpredictable way.
For me, the ideal would be to snap one of the ends and move the others accordingly.
But it would still be necessary to define how to choose this end.
And this should also perhaps be reflected in the other NLA snap modes (and the snap in Action and Graph since they share the same code).
For the NLA markers/seconds, it would probably be best to check both ends for the closest marker/second and pick whatever end has the minimum distance.
And make sure that the scale of the strip isn't what is changed, just the start/end
looking at this now
Just noting that this is the same in the DopeSheet and Graph Editor as well
Christoph Lendenfeld referenced this issue2023-09-15 09:55:08 +02:00
Just wanted to check if there has been thoughts / discussions about this? (So if you have a range of keyframes selected, snapping would only work on the leftmost/rightmost, the others get corresponding offset -- similar to what we have for the NLA now)
yes but this would be a separate patch. It's less of a bug than the NLA behavior
For 4.1 we plan to revisit and expand the whole snapping system. It will likely be addressed during that process