Fix #110108: NLA Markers transform not resetting correctly

Caused by bd00324c26.

bd00324c26 allowed `strip->start` to have the same value as
`strip->end` (ignoring the `NLASTRIP_MIN_LEN_THRESH`).

So `oLen` can be `0.0f` in `BKE_nlameta_flush_transforms` and create
`nan` when used in division.

This `nan` invalidates later transform operations.

---
I'm not sure if 0-length strips should be allowed. So maybe the fix should be extended to other places.